# Parallel_Computing_CourseWork

./: CMakeLists.txt  Config.json  README.md
src/: FileScanner.cc  FileScanner.h  InvertedIndex.cc  InvertedIndex.h  Server.cc  Server.h  ThreadPool.cc  ThreadPool.h  Timer.cc  Timer.h  main.cc
src/client/: Client.cc  client.html  styles.css
